# ORM

./: .env  .env-non-dev  README.md  docker-compose.yml  pyproject.toml
app/: ORM.py  clear_database.py  config.py  create_tables.py  database_entry.py  main.py  triggers.py
app/data_sources/storages/: defect_repository.py  employee_repository.py
app/pydantic_models/: pydantic_models.py
app/views/: defects.py  employees.py
scripts_for_docker/: app.sh
